--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "devDependencies": {
-    "karma": "~0.12.28",
-    "protractor": "^1.1.1",
-    "http-server": "^0.6.1",
     "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2",
-    "karma-chrome-launcher": "~0.1.7",
-    "karma-jasmine-jquery": "~0.1.1",
-    "jquery": "~2.1.3",
     "gulp": "~3.8.10",
     "gulp-concat": "~2.4.2",
-    "gulp-jshint": "~1.9.0",
     "gulp-inject": "~1.1.1",
-    "q": "~1.1.2"
+    "gulp-jshint": "~1.9.0",
+    "http-server": "^0.6.1",
+    "jasmine-core": "^2.1.3",
+    "jquery": "~2.1.3",
+    "karma": "~0.12.28",
+    "karma-chrome-launcher": "~0.1.7",
+    "karma-jasmine": "^0.3.4",
+    "karma-jasmine-jquery": "~0.1.1",
+    "karma-junit-reporter": "^0.2.2",
+    "protractor": "^1.1.1",
+    "q": "~1.1.2",
+    "shelljs": "^0.2.6"
   },
   "scripts": {
     "postinstall": "bower install",
